--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       DB_PORT: ${DB_PORT:-5432}
       DB_HOST: db
       API_SECRET: ${API_SECRET:-default-secret}
-      GRID_UI: ${GRID_UI:-http://localhost:5173}
+      GRID_UI: ${GRID_UI}
     ports:
       - "8081:8081"
     depends_on:
